--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Send Money, Pay Online, or Set Up a Merchant Account.</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Titillium+Web:wght@200;300;400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
