--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@
       <div class="signup-page_content">
         <div class="signup-page_content--left">
           <div class="content-left_images">
-            <img src="images/person-1.jpg" alt="person-1">
-            <img src="images/person-2.jpg" alt="person-2">
-            <img src="images/person-3.jpg" alt="person-3">
+            <img src="./images/person-1.jpg" alt="person-1">
+            <img src="./images/person-2.jpg" alt="person-2">
+            <img src="./images/person-3.jpg" alt="person-3">
           </div>
           <h1>See for yourself why millions of people love PayPal</h1>
         </div>
